# ai-math-assistant

./: .gitignore  DEPLOYMENT.md  Dockerfile  FUTURE_UPDATES.md  README.md  architecture.drawio  main.py  package-lock.json  pyproject.toml  requirements.txt
ai_math_assistant/: __init__.py  agent.py  math_tools.py  server.py
frontend/: .env.production  .env.production.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
tests/: test_math_tools.py
